--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "@types/node": "^16.18.75",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "i18next": "^23.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -41,7 +45,7 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.70.0",
-    "tailwindcss": "^3.4.1"
+    "eslint-config-prettier": "^9.1.0",
+    "sass": "^1.70.0"
   }
 }
