--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-unused-imports": "^3.0.0",
     "i18next": "^23.8.2",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.3",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.9",
     "eslint-config-prettier": "^9.1.0",
     "sass": "^1.70.0"
   }
