--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "algoliasearch": "^4.22.1",
+    "countries-list": "^3.1.0",
+    "country-data": "^0.0.31",
+    "date-fns": "^3.6.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-unused-imports": "^3.0.0",
     "i18next": "^23.8.2",
@@ -57,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@types/country-data": "^0.0.5",
     "@types/lodash.debounce": "^4.0.9",
     "eslint-config-prettier": "^9.1.0",
     "sass": "^1.70.0"
