--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@algolia/autocomplete-plugin-query-suggestions": "^1.17.0",
     "@algolia/autocomplete-theme-classic": "^1.17.0",
     "@cloudpower97/use-here-api": "^0.5.0",
+    "@reach/combobox": "^0.18.0",
+    "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -33,6 +35,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "typescript": "^4.9.5",
+    "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -61,6 +64,7 @@
   },
   "devDependencies": {
     "@types/country-data": "^0.0.5",
+    "@types/google.maps": "^3.55.7",
     "@types/lodash.debounce": "^4.0.9",
     "eslint-config-prettier": "^9.1.0",
     "sass": "^1.70.0"
